[package]
name = "wrooky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tui = "0.19.0"          # TUI
ratatui = "0.26.1"      #Ratatui
crossterm = "0.27.0"    # terminal back-end
arboard = "3.2.0"       # copy text to clipboard
rpassword = "7.2.0"     # Password input library
rusqlite = {version  = "0.30.0",  features = ["bundled"]}    # SQLite database
dirs = "5.0.1"
tui-textarea = "0.4.0"
